<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="dialog_team_title">The Team</string>
    <string name="bottom_nav_system_title">System</string>
    <string name="bottom_nav_lockscreen_title">Lockscreen</string>
    <string name="bottom_nav_statusbar_title">Statusbar</string>
    <string name="bottom_nav_navigation_title">Navigation</string>
    <string name="bottom_nav_multitasking_title">Multitasking</string>
    <string name="heads_up_warning_text">Heads up notifications are meant to be used for multitasking while using full screen apps and/or playing games. Just know that while you use heads up notifications, you will not be able to use the ticker feature.</string>
    <string name="ticker_warning_text">The ticker feature is meant to be used as a mulitasking tool and brings a bit of splash of the old times. Just know that while you use the ticker feature, you will not be able to use heads up notifications.</string>
    <string name="carrier_label_warning_text">Be advised that the custom carrier label is not available in the extended statusbar area, also known as the quick settings area. Also using emojis as your carrier label might cause some visibility issues on lighter backgrounds.</string>
    <string name="lockscreen_torch_warning_text">The lockscreen torch feature is meant to be used only when the screen is turned off. Also note that leaving your flashlight on for a long period of time will cause your battery to drain faster.</string>
    <string name="slim_recents_hints_footer">To clear all apps, pinch-in with two fingers on the panel. To block an app from being cleared, long press on its icon to star it.\n\nFor additional recents features such as multiwindow or to kill an app, long press on any app window in the panel.</string>
    <string name="smart_pixels_warning_text">Smart pixels is a power saving feature. Depending on how many pixels you decide to turn off, you could see a significant improvement in battery life. For a good user experience, we recommend you set the amount of disabled pixels at 75 percent.</string>
    <string name="device_extras_title">Device extras</string>
    <string name="device_extras_summary">Device specific tweaks</string>
    <string name="miscellaneous_title">Miscellaneous</string>
    <string name="miscellaneous_summary">Miscellaneous tweaks</string>
    <string name="powermenu_title">Power menu</string>
    <string name="powermenu_summary">Configure the power menu on and off the lockscreen with many items</string>
    <string name="fingerprint_prefs_title">Fingerprint prefs</string>
    <string name="fingerprint_prefs_summary">Tweaks specific to the fingerprint scanner</string>
    <string name="lockscreen_items_title">Lockscreen items</string>
    <string name="lockscreen_items_summary">Remove or add items on the lockscreen</string>
    <string name="battery_options_title">Battery options</string>
    <string name="battery_options_summary">Customize the statusbar or QS tile battery</string>
    <string name="carrier_label_title">Carrier label</string>
    <string name="carrier_label_summary">Customize the carrier label on the lockscreen or statusbar</string>
    <string name="clock_options_title">Clock options</string>
    <string name="clock_options_summary">Customize your statusbar clock</string>
    <string name="icon_manager_title">Icon manager</string>
    <string name="icon_manager_summary">Configure the visibility of statusbar items</string>
    <string name="notifications_title">Notifications</string>
    <string name="notifications_summary">Tweaks specific to system notifications</string>
    <string name="quicksettings_title">Quick settings</string>
    <string name="quicksettings_summary">Configure the layout of the quick settings area</string>
    <string name="ticker_title">Ticker</string>
    <string name="ticker_summary">Enable the statusbar ticker and configure ticker related tweaks</string>
    <string name="traffic_title">Traffic indicators</string>
    <string name="traffic_summary">Enable and configure the traffic indicators on the statusbar</string>
    <string name="buttons_title">Buttons</string>
    <string name="buttons_summary">Configure hardware keys and/or volume rocker options</string>
    <string name="navigationbar_title">Navigation bar</string>
    <string name="navigationbar_summary">Configure smartbar, fling or pulse</string>
    <string name="headsup_title">Heads up</string>
    <string name="headsup_summary">Configure heads up options</string>
    <string name="recents_title">Recents</string>
    <string name="recents_summary">Configure recents options</string>
    <string name="button_backlight_options_category">Backlight options</string>
    <string name="button_backlight_enable_title">Allow button backlight</string>
    <string name="button_link_brightness">Link to screen brightness</string>
    <string name="button_link_brightness_summary">Button backlight brightness will adjust based on the screen\'s brightness level</string>
    <string name="button_manual_brightness">Brightness level</string>
    <string name="button_timeout_title">Backlight timeout</string>
    <string name="button_backlight_on_touch_only_title">Button backlight touch</string>
    <string name="button_backlight_on_touch_only_summary">Button backlight will only appear when buttons are pressed rather than on all the time. Timeout still impacts this feature.</string>
    <string name="powermenu_reboot_title">Reboot</string>
    <string name="powermenu_advanced_reboot_title">Advanced reboot</string>
    <string name="powermenu_advanced_reboot_summary">Enables the advanced reboot menu for rebooting options such hot, recovery and bootloader. Also adds as an option to restart SystemUI</string>
    <string name="powermenu_screenshot_title">Screenshot</string>
    <string name="powermenu_airplane_title">Airplane mode</string>
    <string name="powermenu_category_visibility">Lockscreen options</string>
    <string name="powermenu_lockscreen_title">Visibility on the lockscreen</string>
    <string name="powermenu_lockscreen_summary">Enable the ability to show and use the power menu dialog while on the lockscreen</string>
    <string name="powermenu_ls_reboot_summary">Show the reboot option on the lockscreen</string>
    <string name="powermenu_ls_advanced_reboot_summary">Show the advanced reboot option on the lockscreen</string>
    <string name="powermenu_ls_screenshot_summary">Show the screenshot option on the lockscreen</string>
    <string name="powermenu_ls_airplane_summary">Show the airplane mode option on the lockscreen</string>
    <string name="theme_category_title">System theme</string>
    <string name="systemui_theme_style_title">Background color</string>
    <string name="systemui_theme_style_auto">Automatic (wallpaper based)</string>
    <string name="systemui_theme_style_light">Light</string>
    <string name="systemui_theme_style_dark">Dark</string>
    <string name="systemui_theme_style_blackaf">BlackAF</string>
    <string name="applying_theme_toast">Applying theme, please wait...</string>
    <string name="theme_applied_toast">Theme applied!</string>
    <string name="disable_themes_installed_title">System themes are unavailable because a Substratum overlay is installed. Please uninstall all overlays targeting Android System to proceed.</string>
    <string name="disable_accents_installed_title">Accent picker are unavailable because a Substratum overlay is installed. Please uninstall all overlays targeting Android System to proceed.</string>
    <string name="disable_fonts_installed_title">Be WARNED: Font picker may conflicts with Substratum. DO NOT apply at the same time; Apply/Use DU or Subs Fonts separately...and REBOOT!</string>
    <string name="accent_picker_dialog_title">Select an accent color</string>
    <string name="theme_accent_picker_title">Accent color</string>
    <string name="theme_accent_picker_summary">Select system theme accent color</string>
    <string name="theme_accent_picker_default">Default</string>
    <string name="dialog_color_picker">Color Picker</string>
    <string name="press_color_to_apply">Press on color below to apply</string>
    <string name="arrow_right">→</string>
    <string name="arrow_down">↓</string>
    <string name="hex">Hex:</string>
    <string name="hex_hint">#ff000000</string>
    <string name="set">Set</string>
    <string name="color_default">Default</string>
    <string name="network_traffic_state_title">Show net activity in statusbar</string>
    <string name="network_traffic_autohide_threshold_title">Net activity autohide threshold (KB/s)</string>
    <string name="volume_keys_control_media_stream_title">Media volume control</string>
    <string name="volume_keys_control_media_stream_summary">Force volume keys to control media stream</string>
    <string name="volume_button_music_control_title">Playback control</string>
    <string name="volume_button_music_control_summary">When the screen is off, long-pressing the volume keys will skip music tracks</string>
    <string name="swap_volume_buttons_title">Reorient</string>
    <string name="swap_volume_buttons_summary">Swap volume buttons when the screen is rotated</string>
    <string name="headset_connect_player_title">Launch music app on headset connection</string>
    <string name="headset_connect_player_disabled">Disabled</string>
    <string name="headset_connect_player_wired">Wired headset plugged in</string>
    <string name="headset_connect_player_bt_no_carkit">BT headset (no carkit) plugged in</string>
    <string name="headset_connect_player_bt">BT headset plugged in</string>
    <string name="headset_connect_player_both_no_carkit">Any headset (no carkit) plugged in</string>
    <string name="headset_connect_player_both">Any headset plugged in</string>
    <string name="carrier_options">Select display locations</string>
    <string name="custom_carrier_label_title">Custom carrier label</string>
    <string name="screenshot_edit_app">Screenshot editor</string>
    <string name="screenshot_edit_app_summary">Select which image editor to use to edit screenshots with</string>
    <string name="three_finger_gesture">Three finger gesture</string>
    <string name="three_finger_gesture_summary">Swipe three finger to screenshot</string>
    <string name="screenshot_options_category">Screenshot options</string>
    <string name="system_default_animation_category">System UI</string>
    <string name="system_default_animation_title">Android P animation style</string>
    <string name="system_default_animation_summary">Enable Android P \"Default\" animations</string>
    <string name="various_tweaks_category">Lil Assassin</string>
    <string name="sensor_block_title">Sensor block per-package</string>
    <string name="sensor_block_summary">Block access to certain sensors for some apps to save battery.</string>
    <string name="gesture_anywhere_title">Gesture Anywhere</string>
    <string name="gesture_anywhere_summary">Launch activities by drawing gestures on the screen</string>
    <string name="corners_category">Corners UI</string>
    <string name="corner_radius">Rounded Corner Radius</string>
    <string name="content_padding">Corner Content Padding</string>
    <string name="corner_fwvals">Use framework values</string>
    <string name="corner_fwvals_summary">Useful if the device actually has rounded corners OR if you like Brad</string>
    <string name="settings_blur_cat">Blur personalizations</string>
    <string name="settings_blur_sum">Blur background settings for system UI</string>
    <string name="edge_gestures_title">Edge gestures</string>
    <string name="edge_gestures_summary">Navigate using edge gestures</string>
    <string name="face_auto_unlock_title">Face auto unlock</string>
    <string name="face_auto_unlock_summary">Dismiss lockscreen after face unlocking</string>
</resources>