<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2017 The Dirty Unicorns Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
            android:title="@string/miscellaneous_title" >

    <PreferenceCategory
        android:key="screenshot_options"
        android:title="@string/screenshot_options_category" >

    <com.dirtyunicorns.tweaks.preferences.SystemSettingSwitchPreference
        android:key="three_finger_gesture"
        android:title="@string/three_finger_gesture"
        android:summary="@string/three_finger_gesture_summary"
        android:defaultValue="false" />

    </PreferenceCategory>

    <Preference
        android:key="screenshot_edit_app"
        android:title="@string/screenshot_edit_app"
        android:summary="@string/screenshot_edit_app_summary" />

    <PreferenceCategory
        android:key="system_ui"
        android:title="@string/system_default_animation_category" >

    <com.dirtyunicorns.tweaks.preferences.GlobalSettingSwitchPreference
        android:key="system_default_animation"
        android:title="@string/system_default_animation_title"
        android:summary="@string/system_default_animation_summary"
        android:defaultValue="false" />

    <Preference
        android:key="blur_cat"
        android:title="@string/settings_blur_cat"
        android:summary="@string/settings_blur_sum"
        android:fragment="com.dirtyunicorns.tweaks.fragments.BlurPersonalizations" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="lil_assassin"
        android:title="@string/various_tweaks_category" >

    <com.dirtyunicorns.tweaks.preferences.SystemSettingSwitchPreference
        android:key="sensor_block"
        android:title="@string/sensor_block_title"
        android:summary="@string/sensor_block_summary"
        android:defaultValue="false" />

    <com.dirtyunicorns.tweaks.preferences.SecureSettingSwitchPreference
        android:key="face_auto_unlock"
        android:title="@string/face_auto_unlock_title"
        android:summary="@string/face_auto_unlock_summary"
        android:defaultValue="false" />

    <Preference
        android:key="gesture_anywhere"
        android:title="@string/gesture_anywhere_title"
        android:summary="@string/gesture_anywhere_summary"
        android:fragment="com.dirtyunicorns.tweaks.gestureanywhere.GestureAnywhereSettings" />

    <Preference
        android:key="edge_gestures"
        android:title="@string/edge_gestures_title"
        android:summary="@string/edge_gestures_summary"
        android:fragment="com.dirtyunicorns.tweaks.fragments.EdgeGesturesSettings"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/corners_category" >

    <com.dirtyunicorns.tweaks.preferences.SecureSettingSwitchPreference
        android:key="sysui_rounded_fwvals"
        android:title="@string/corner_fwvals"
        android:summary="@string/corner_fwvals_summary"
        android:defaultValue="true"
        android:disableDependentsState="true" />

    <com.dirtyunicorns.tweaks.preferences.CustomSeekBarPreference
        android:key="sysui_rounded_size"
        android:title="@string/corner_radius"
        android:max="25"
        settings:min="0"
        settings:units=""
        android:persistent="false"
        android:dependency="sysui_rounded_fwvals" />

    <com.dirtyunicorns.tweaks.preferences.CustomSeekBarPreference
        android:key="sysui_rounded_content_padding"
        android:title="@string/content_padding"
        android:max="10"
        settings:min="0"
        settings:units=""
        android:persistent="false"
        android:dependency="sysui_rounded_fwvals" />

    </PreferenceCategory>

</PreferenceScreen>
